* removing MaxPermSize