@@ -134,7 +134,7 @@ project.conf2ScopeMappings.addMapping(MavenPlugin.TEST_COMPILE_PRIORITY + 2, pro
 check.dependsOn integrationTest
 
 task springSnapshotTest(type: Test) {
-	jvmArgs = ['-ea', '-Xmx500m', '-XX:MaxPermSize=128M']
+	jvmArgs = ['-ea', '-Xmx500m']
 	classpath = sourceSets.test.output + sourceSets.main.output + configurations.springSnapshotTestRuntime
 	reports {
 		html.destination = project.file("$buildDir/spring-snapshot-test-results/")
@@ -168,7 +168,7 @@ configurations.all {
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 project.tasks.matching { it instanceof Test && it.name != 'integrationTest' }.all {
-	jvmArgs = ['-ea', '-Xmx500m', '-XX:MaxPermSize=512m']
+	jvmArgs = ['-ea', '-Xmx500m']
 	maxParallelForks = guessMaxForks()
 	logging.captureStandardOutput(LogLevel.INFO)
 }
